--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "farhanwazir/laravelgooglemaps": "^2.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.7"
+        "laravelcollective/html": "^5.7",
+        "mews/captcha": "^2.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
